--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/fonts/Mont/fonts.css">
-    <link rel="stylesheet" href="/fonts/Gilroy/fonts.css">
+    <link rel="stylesheet" href="fonts/Mont/fonts.css">
+    <link rel="stylesheet" href="fonts/Gilroy/fonts.css">
     <link rel="stylesheet" href="style.css">
 
-
 </head>
+
 <body>
 
 
 <div class="container">
+    <div class="burger">
+        <div class="burgerLine"></div>
+        <div class="burgerLine"></div>
+        <div class="burgerLine"></div>
+    </div>
 
     <header>
 
@@ -24,6 +29,7 @@
         </div>
 
         <div class="header">
+
             <div class="innerContainer">
                 <div class="header__block">
                     <div class="header__logo">
@@ -31,10 +37,10 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__menuList">
-                            <li class="menu__item active">Why MagicMassage</li>
-                            <li class="menu__item">Features</li>
-                            <li class="menu__item">Reviews</li>
-                            <li class="menu__item">FAQ</li>
+                            <li class="menu__item active"><a href="#Description">Why MagicMassage</a></li>
+                            <li class="menu__item"><a href="#Buy">Features</a></li>
+                            <li class="menu__item"><a href="#Testimonial">Reviews</a></li>
+                            <li class="menu__item"><a href="#FAQ">FAQ</a></li>
                         </ul>
                     </nav>
                     <a class="header__order" href="#">ORDER NOW</a>
@@ -44,7 +50,7 @@
         </div>
     </header>
 
-    <div class="description">
+    <div class="description" id="Description">
         <div class="innerContainer">
             <div class="description__block">
 
@@ -165,9 +171,9 @@
         </div>
     </div>
 
-    <div class="buy">
+    <div class="buy" id="Buy">
         <div class="innerContainer">
-            <div class="buy block">
+            <div class="buy__block">
                 <h1 class="buy__title">Buy More & Save More!</h1>
                 <h2 class="buy__subTitle">Limited-Time Offer </h2>
 
@@ -189,13 +195,13 @@
                         </div>
                         <a class="getPurpose" href="#">GET YOUR MAGIC</a>
                         <div class="partners">
-                            <img src="img/buyParners/buypartners%20(1).png" alt="amex">
-                            <img src="img/buyParners/buypartners%20(2).png" alt="applePay">
-                            <img src="img/buyParners/buypartners%20(3).png" alt="googlePay">
-                            <img src="img/buyParners/buypartners%20(4).png" alt="Maestro">
-                            <img src="img/buyParners/buypartners%20(5).png" alt="MasterCard">
-                            <img src="img/buyParners/buypartners%20(6).png" alt="PayPal">
-                            <img src="img/buyParners/buypartners%20(7).png" alt="Visa">
+                            <img src="img/buyPartners/buypartners%20(1).png" alt="amex">
+                            <img src="img/buyPartners/buypartners%20(2).png" alt="applePay">
+                            <img src="img/buyPartners/buypartners%20(3).png" alt="googlePay">
+                            <img src="img/buyPartners/buypartners%20(4).png" alt="Maestro">
+                            <img src="img/buyPartners/buypartners%20(5).png" alt="MasterCard">
+                            <img src="img/buyPartners/buypartners%20(6).png" alt="PayPal">
+                            <img src="img/buyPartners/buypartners%20(7).png" alt="Visa">
                         </div>
 
                     </div>
@@ -236,13 +242,13 @@
 
                         <a class="getPurpose" href="#">GET YOUR MAGIC</a>
                         <div class="partners">
-                            <img src="img/buyParners/buypartners%20(1).png" alt="amex">
-                            <img src="img/buyParners/buypartners%20(2).png" alt="applePay">
-                            <img src="img/buyParners/buypartners%20(3).png" alt="googlePay">
-                            <img src="img/buyParners/buypartners%20(4).png" alt="Maestro">
-                            <img src="img/buyParners/buypartners%20(5).png" alt="MasterCard">
-                            <img src="img/buyParners/buypartners%20(6).png" alt="PayPal">
-                            <img src="img/buyParners/buypartners%20(7).png" alt="Visa">
+                            <img src="img/buyPartners/buypartners%20(1).png" alt="amex">
+                            <img src="img/buyPartners/buypartners%20(2).png" alt="applePay">
+                            <img src="img/buyPartners/buypartners%20(3).png" alt="googlePay">
+                            <img src="img/buyPartners/buypartners%20(4).png" alt="Maestro">
+                            <img src="img/buyPartners/buypartners%20(5).png" alt="MasterCard">
+                            <img src="img/buyPartners/buypartners%20(6).png" alt="PayPal">
+                            <img src="img/buyPartners/buypartners%20(7).png" alt="Visa">
                         </div>
                     </div>
 
@@ -281,13 +287,13 @@
 
                         <a class="getPurpose" href="#">GET YOUR MAGIC</a>
                         <div class="partners">
-                            <img src="img/buyParners/buypartners%20(1).png" alt="amex">
-                            <img src="img/buyParners/buypartners%20(2).png" alt="applePay">
-                            <img src="img/buyParners/buypartners%20(3).png" alt="googlePay">
-                            <img src="img/buyParners/buypartners%20(4).png" alt="Maestro">
-                            <img src="img/buyParners/buypartners%20(5).png" alt="MasterCard">
-                            <img src="img/buyParners/buypartners%20(6).png" alt="PayPal">
-                            <img src="img/buyParners/buypartners%20(7).png" alt="Visa">
+                            <img src="img/buyPartners/buypartners%20(1).png" alt="amex">
+                            <img src="img/buyPartners/buypartners%20(2).png" alt="applePay">
+                            <img src="img/buyPartners/buypartners%20(3).png" alt="googlePay">
+                            <img src="img/buyPartners/buypartners%20(4).png" alt="Maestro">
+                            <img src="img/buyPartners/buypartners%20(5).png" alt="MasterCard">
+                            <img src="img/buyPartners/buypartners%20(6).png" alt="PayPal">
+                            <img src="img/buyPartners/buypartners%20(7).png" alt="Visa">
                         </div>
                     </div>
 
@@ -298,8 +304,8 @@
     </div>
 
 
-    <div class="testimonial">
-        <div class="innercontainer">
+    <div class="testimonial" id="Testimonial">
+        <div class="innerContainer">
             <div class="testimonial__block">
 
                 <h1 class="testimonial__title">Hear what our customers <span>are saying</span></h1>
@@ -430,7 +436,7 @@
         </div>
     </div>
 
-    <div class="faq">
+    <div class="faq" id="FAQ">
         <div class="innerContainer">
             <div class="faq__block">
                 <h1 class="faq__title">Frequently Asked <span>Questions</span></h1>
